# product-ratings

./: README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
