[tool.poetry]
name = "product-ratings"
version = "1.0.0"
description = "products ratings project"
authors = ["Anand anandu023380@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"